# flappybird_godmod

./: CLAUDE.md  README.md  README_bot.md  main.py  main_bot.py  pyproject.toml  replay_seed.py  sequential_visual.py
src/: bird.py  config.py  game.py  replay_seed.py  score.py  sequential_visual.py  utils.py  windows.py
test/: test_bot.py
