[tool.poetry]
name = "flappybird-godmod"
version = "0.1.0"
description = ""
authors = ["Morgan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pre-commit = "^3.6.2"
numpy = "^1.26.4"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
